--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      /* html,
+      body {
+        font-size: 14px;
+      }
+      @media screen and (max-width: 976px) {
+        html,
+        body {
+          font-size: 8px;
+        }
+      } */
+      #root {
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
